--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 .bigelow-rules-regular {
-            font-family: "Bigelow Rules", serif;
-            font-weight: 400;
-            font-style: normal;
-          }
+	font-family: "Bigelow Rules", serif;
+	font-weight: 400;
+	font-style: normal;
+}
 
 .oleo-script-regular {
 	font-family: "Oleo Script", system-ui;
@@ -38,15 +38,16 @@ nav {
 		flex-direction: row;
 		justify-content: space-evenly;
 		font-size: 30px;
-        &:hover{
-            color: white;
-        }
+		&:hover {
+			color: white;
+		}
 	}
 	margin: 0%;
 }
 main {
 	padding: 0px;
 	background-image: url(/images/main_background.jpg);
+    background-attachment: fixed;
 	background-size: cover;
 	width: 100%;
 	height: 1301px;
@@ -57,66 +58,69 @@ main {
 		background-color: #6a3460;
 		align-content: center;
 		font-size: 60px;
-        font-family: "Bigelow Rules", serif;
-        font-weight: 400;
-        line-height: 55.32px;
-        justify-items:center;		
+		font-family: "Bigelow Rules", serif;
+		font-weight: 400;
+		line-height: 55.32px;
+		justify-items: center;
 	}
-    #type_voyageur{
-        margin-top: 600px;
-        display: flex;
-        flex-direction: column;
-        background-color: aliceblue;
-        align-items: center;
-        justify-content: center;
-        font-size: x-large;
-    }
-    #choix{
-        display: flex;
-        flex-direction: row;
-        &:hover{
-            background-color: #6a3460;
-        }
-        img{
-            display: flex;
-            flex-direction: row;
-            width: 200px;
-            height: 200px;
-            
-        }
-        figcaption{
-            text-align: center;
-            font-size: x-large;
-        }
-    }
-    #Bot_main{
-        display: flex;
-        flex-direction: column;
-        justify-items: center;
-    }
-    #Bas_page{
-        
-        margin-top: 60px;
-        display: flex;
-        justify-content: center;
-        background-image: url("/images/bouton.jpg");
-        background-size: cover;
-        button{
-            height: 70px;
-            width: 100px;
-            &:hover{
-                width: 500px;
-                border: 2px solid purple;
-                color: #6a3460;
-                
-            }
-        }
-    }
+	#type_voyageur {
+		margin-top: 600px;
+		display: flex;
+		flex-direction: column;
+		background-color: aliceblue;
+		align-items: center;
+		justify-content: center;
+		font-size: x-large;
+	}
+	#choix {
+		display: flex;
+		flex-direction: row;
+		&:hover {
+			background-color: #6a3460;
+		}
+		img {
+			display: flex;
+			flex-direction: row;
+			width: 200px;
+			height: 200px;
+		}
+		figcaption {
+			text-align: center;
+			font-size: x-large;
+		}
+	}
+	#Bot_main {
+		display: flex;
+		flex-direction: column;
+		justify-items: center;
+	}
+	#Bas_page {
+		margin-top: 60px;
+		display: flex;
+		justify-content: center;
+		background-size: cover;
+		button {
+			height: 70px;
+			width: 100px;
+			&:hover {
+				width: 150px;
+				border: 2px solid purple;
+				color: #6a3460;
+			}
+		}
+	}
+	.parallax {
+		background-attachment: fixed;
+		background-size: cover;
+		background-position: center;
+		background-repeat: no-repeat;
+		background-image: url("/images/bouton.jpg");
+	}
 }
 footer {
 	background-color: #6a3460;
 	width: 100%;
-	height: 270px;
-    display: flex;
-    justify-content: center;
+	height: 500px;
+	display: flex;
+	justify-content: center;
 }
